openturns/1.16/_sources/auto_data_analysis/manage_data_and_samples/plot_sample_pandas.rst.txt
.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_auto_data_analysis_manage_data_and_samples_plot_sample_pandas.py>`     to download the full example code
    .. rst-class:: sphx-glr-example-title

    .. _sphx_glr_auto_data_analysis_manage_data_and_samples_plot_sample_pandas.py:


Link Pandas and OpenTURNS
=========================


.. code-block:: default

    # sphinx_gallery_thumbnail_path = '_static/pandas.png'








In this example we are going to explore interaction with Pandas data analysis tool.


.. code-block:: default

    from __future__ import print_function
    import openturns as ot
    import pandas as pd
    ot.Log.Show(ot.Log.NONE)








create a sample from a 3-d gaussian distribution


.. code-block:: default

    sample = ot.Normal(3).getSample(10)








Create a DataFrame from a Sample


.. code-block:: default

    df = pd.DataFrame.from_records(sample, columns=sample.getDescription())
    df.describe()






.. raw:: html

    <div>
    <style scoped>
        .dataframe tbody tr th:only-of-type {
            vertical-align: middle;
        }

        .dataframe tbody tr th {
            vertical-align: top;
        }

        .dataframe thead th {
            text-align: right;
        }
    </style>
    <table border="1" class="dataframe">
      <thead>
        <tr style="text-align: right;">
          <th></th>
          <th>X0</th>
          <th>X1</th>
          <th>X2</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th>count</th>
          <td>10.000000</td>
          <td>10.000000</td>
          <td>10.000000</td>
        </tr>
        <tr>
          <th>mean</th>
          <td>0.201254</td>
          <td>-0.341580</td>
          <td>-0.143151</td>
        </tr>
        <tr>
          <th>std</th>
          <td>1.122471</td>
          <td>1.126257</td>
          <td>0.678845</td>
        </tr>
        <tr>
          <th>min</th>
          <td>-2.290062</td>
          <td>-2.181385</td>
          <td>-1.311781</td>
        </tr>
        <tr>
          <th>25%</th>
          <td>-0.288951</td>
          <td>-1.209149</td>
          <td>-0.695591</td>
        </tr>
        <tr>
          <th>50%</th>
          <td>0.459701</td>
          <td>-0.298012</td>
          <td>0.060783</td>
        </tr>
        <tr>
          <th>75%</th>
          <td>0.746917</td>
          <td>0.351669</td>
          <td>0.343263</td>
        </tr>
        <tr>
          <th>max</th>
          <td>1.782359</td>
          <td>1.437249</td>
          <td>0.810668</td>
        </tr>
      </tbody>
    </table>
    </div>
    <br />
    <br />

Create a Sample from a DataFrame


.. code-block:: default

    sample2 = ot.Sample(df.values)
    sample2.setDescription(df.columns)
    sample2





.. raw:: html

    <TABLE><TR><TD></TD><TH>X0</TH><TH>X1</TH><TH>X2</TH></TR>
    <TR><TH>0</TH><TD>0.6082017</TD><TD>-1.266173</TD><TD>-0.4382656</TD></TR>
    <TR><TH>1</TH><TD>1.205478</TD><TD>-2.181385</TD><TD>0.3500421</TD></TR>
    <TR><TH>2</TH><TD>-0.355007</TD><TD>1.437249</TD><TD>0.810668</TD></TR>
    <TR><TH>3</TH><TD>0.793156</TD><TD>-0.4705256</TD><TD>0.2610179</TD></TR>
    <TR><TH>4</TH><TD>-2.290062</TD><TD>-1.282885</TD><TD>-1.311781</TD></TR>
    <TR><TH>5</TH><TD>-0.09078383</TD><TD>0.9957932</TD><TD>-0.1394528</TD></TR>
    <TR><TH>6</TH><TD>-0.5602056</TD><TD>0.4454897</TD><TD>0.322925</TD></TR>
    <TR><TH>7</TH><TD>0.4457853</TD><TD>-1.038077</TD><TD>-0.8567123</TD></TR>
    <TR><TH>8</TH><TD>0.4736169</TD><TD>-0.1254977</TD><TD>0.3514178</TD></TR>
    <TR><TH>9</TH><TD>1.782359</TD><TD>0.07020736</TD><TD>-0.7813665</TD></TR>
    </TABLE>
    <br />
    <br />


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.234 seconds)


.. _sphx_glr_download_auto_data_analysis_manage_data_and_samples_plot_sample_pandas.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_sample_pandas.py <plot_sample_pandas.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_sample_pandas.ipynb <plot_sample_pandas.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
